# kiriRoguelike

./: Cargo.toml  README.md
src/: camera.rs  character.rs  coords.rs  generator.rs  layer.rs  main.rs  tile.rs  tile_atlas.rs  tile_types.rs  world.rs
src/entities/: entities.rs  mod.rs  player.rs
src/graphics/: brightness.rs  chunk_terrain.rs  layer.rs  mod.rs  tile.rs  tile_atlas.rs
