[package]
name = "kiriroguelike"
version = "0.1.0"
authors = ["kirinokirino <kirinokirino@lunariko.com>"]
edition = "2018"
description = "Kind-off following the Roguelike Tutorial in Rust, but with the macroquad engine and without an ECS."
repository = "https://github.com/kirinokirino/kiriroguelike"
documentation = ""
homepage = ""
readme = "README.md"
license = "mit"
keywords = ["game"]
categories = ["games"]

[dependencies]
macroquad = { version = "0.4", default-features = false }
#symmetric-shadowcasting = "0.2.0"
simdnoise = "3.1.6"

[profile.dev]
